# Haicklib

./: CMakeLists.txt  pageout.py
misc/: FindHaicklib.cmake  haicklib.pc.in
src/: CMakeLists.txt  HaicklibConfig.h.in  dbgHelper.cpp  dbgHelper.h  haicklib.cpp  haicklib.h  pageout.py
